--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
-== Welcome, please read (README.md)[http://github.com/andreydjason/rails-play/README.md]
-
----
+== Welcome, please read this README.md[http://github.com/andreydjason/rails-play/README.md]
 
 This is about the Rails web framework, reference to README of Ruby on Rails application
+
+---
 
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
